<?xml version="1.0"?>
<package format="2">
    <name>moveo_bringup</name>
    <version>0.0.0</version>
    <description>The moveo_bringup package</description>
    <maintainer email="IEEE_UFABC_RASARM@todo.todo">IEEE-UFABC-RASARM</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/giovannirdias/IEEE-RASArm</url>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <!--   <depend>roscpp</depend> -->
    <!--   Note that this is equivalent to the following: -->
    <!--   <build_depend>roscpp</build_depend> -->
    <!--   <exec_depend>roscpp</exec_depend> -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use build_export_depend for packages you need in order to build against this package: -->
    <!--   <build_export_depend>message_generation</build_export_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <!-- Use doc_depend for packages you need only for building documentation: -->
    <!--   <doc_depend>doxygen</doc_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- -->
    <exec_depend>computed_torque_controller</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>pid_plus_gravity_controller</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>wam_description</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export></export>
</package>
